--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,17 @@
 body {
+    margin: 0;
     display: flex;
     flex-direction: column;
 }
 .header, .footer {
     background-color: #1F2937;
+    height: auto;
     display: flex;
-    justify-content: center;
+    align-items: center;
+}
+
+.linkone {
+    ;
 }
 
 li {
@@ -18,4 +24,10 @@ ul {
     color: white;
     padding: 0;
     margin: 0;
+}
+
+.hero {
+    height: 360px;
+    background-color: #1F2937;
+    color: white;
 }
