--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Quicksand, Roboto, Lato;
 }
 .header, .footer {
     background-color: #1F2937;
@@ -51,4 +53,6 @@ ul {
 
 .button {
     background-color: #31d2b1;
+    border: none;
+    border-radius: 4px;
 }
