--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,3 +56,22 @@ ul {
     border: none;
     border-radius: 4px;
 }
+
+.quote {
+    height: 200px;
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100px;
+    color: white;
+    gap: 8px;
+}
