--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,8 +7,7 @@ body {
     font-family: Quicksand, Roboto, Lato;
 }
 .header, .footer {
-    background-color: #1F2937;
-    height: auto;
+    background-color: #1F2937;  
     display: flex;
     align-items: center;
 }
@@ -16,6 +15,7 @@ body {
 .header {
     justify-content: space-between;
     padding: 12px 144px;
+    height: auto;
 }
 
 .logo {
@@ -55,6 +55,23 @@ ul {
     background-color: #31d2b1;
     border: none;
     border-radius: 4px;
+}
+
+.steps {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.imagesteps {
+    display: flex;
+    gap: 32px;
+}
+
+.imagesteps img {
+    border-radius: 20px;
+    height: 144px;
+    width: 144px;
 }
 
 .quote {
