--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,10 +51,15 @@ ul {
     color: #E5E7EB;
 }
 
+button {
+    border-radius: 8px;
+    padding: 8px 32px;
+}
+
 .button {
     background-color: #31d2b1;
-    border: none;
-    border-radius: 4px;
+    border: 1px solid #31d2b1;
+    color: white; 
 }
 
 .steps {
@@ -74,13 +79,19 @@ ul {
     width: 144px;
 }
 
-.quote {
+.quotes {
     height: 200px;
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
 }
 
 .callaction {
@@ -90,6 +101,7 @@ ul {
     margin: 144px;
     background-color: #31d2b1;
     padding: 36px 72px;
+    border-radius: 10px;
 }
 
 .buttontwo {
