--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,6 +56,13 @@ ul {
     color: #E5E7EB;
 }
 
+.promothree {
+    font-size: 28px;
+    font-weight: bold;
+    color: #1F2937;
+    margin: 28px;
+}
+
 button {
     border-radius: 8px;
     padding: 8px 32px;
@@ -85,6 +92,30 @@ button {
     object-fit: cover;
 }
 
+.register {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+}
+
+.bank {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+}
+
+.goal {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+}
+
+.growth {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+}
+
 .quotes {
     height: 200px;
     background-color: #E5E7EB;
@@ -97,7 +128,7 @@ button {
 .quote {
     font-size: 36px;
     font-style: italic;
-    font-weight: lighter;
+    font-weight: 100;
     width: 850px;
 }
 
