--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    font-family: Quicksand, Roboto, Lato;
+    font-family: Lato, Roboto;
 }
 .header, .footer {
     background-color: #1F2937;  
@@ -45,6 +45,7 @@ ul {
     display: flex;
     flex-direction: column;
     gap: 28px;
+    justify-content: center;
 }
 
 .saving {
@@ -78,7 +79,8 @@ button {
 .default {
     background-color: #31d2b1;
     border: 1px solid #31d2b1;
-    color: white; 
+    color: white;
+    align-self: flex-start; 
 }
 
 .steps {
